# TalLearn

./: pyproject.toml  req.txt  requirements.txt
Tallearn/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  req.txt  requirentments.txt
Tallearn/about/: admin.py  forms.py  models.py  urls.py  views.py
Tallearn/about/migrations/: 0001_initial.py  0002_alter_about_bio_alter_about_proficiency_level.py  0002_remove_about_head_description_and_more.py  0003_alter_about_bio_alter_about_proficiency_level.py  0004_about_link_instagram_about_link_telegram_and_more.py  0004_alter_about_bio.py  0005_alter_about_bio.py  0005_rename_email_feedback_email_or_phone.py  0006_contact.py
Tallearn/api/: urls.py
Tallearn/api/about_api/: serializer_about_api.py  views_about_api.py
Tallearn/api/blog_n_events_api/: serializer_bne_api.py  views_bne_api.py
Tallearn/api/courses_api/: serializer_courses_api.py  views_courses_api.py
Tallearn/blog_n_events/: admin.py  apps.py  models.py  urls.py  views.py
Tallearn/blog_n_events/migrations/: 0001_initial.py  0002_alter_event_slug_alter_post_slug.py  0002_post_head_slug_delete_comment.py  0003_post_head_description_post_head_title.py  0004_remove_post_head_description_remove_post_head_slug_and_more.py  0005_alter_event_create_at.py
Tallearn/config/: settings.py  urls.py
Tallearn/courses/: admin.py  forms.py  models.py  urls.py  views.py
Tallearn/courses/migrations/: 0001_initial.py  0002_alter_course_options.py  0002_remove_course_head_description_and_more.py  (+3 more)
Tallearn/templates/: base.html
(+17 files in other folders)
