[tool.poetry]
name = "tallearn"
version = "0.1.0"
description = ""
authors = ["Rezurgat <Killa.S.V.ru@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
Pillow = "^9.1.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
